# uraha-effiloop-mini

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/pages/: 01_Practice.py  02_Logs.py
