[tool.poetry]
name = "uraha-effiloop-mini"
version = "0.1.0"
description = "EffiLoop mini (Streamlit)"
authors = ["uraha"]
package-mode = false

[tool.poetry.dependencies]
# いまのローカルが Python 3.9.6 なので 3.9系を許可しておく
python = "^3.9"
streamlit = "*"
pandas = "*"
altair = "<5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"